--- a/index.qmd
+++ b/index.qmd
@@ -7,11 +7,13 @@ format:
     mainfont: "Noto Sans TC"
     link-external-newwindow: true
     toc-title: "目次"
-    other-links:
-      - text: 課程簡報下載
+    other-links: 
+      - text: 課程簡報
         href: https://www.canva.com/design/DAGH-2c7MEw/BRICDWiQT_WeGGY-etEBRg/view?utm_content=DAGH-2c7MEw&utm_campaign=designshare&utm_medium=link&utm_source=editor
       - text: 範例資料來源
         href: https://dep.mohw.gov.tw/DOS/cp-5337-62357-113.html
+      - text: 線上配色工具
+        href: https://colorhunt.co/
 ---
 
 # 1. 長條圖
