--- a/index.qmd
+++ b/index.qmd
@@ -14,6 +14,8 @@ format:
         href: https://dep.mohw.gov.tw/DOS/cp-5337-62357-113.html
       - text: 線上配色工具
         href: https://colorhunt.co/
+      - text: 意見回饋表單
+        href: https://forms.gle/EAyJojhFsZ2jyfaz9
 ---
 
 # 1. 長條圖
